# node-ctypes

./: .clang-format  .gitignore  .gitmodules  .prettierrc  CMakeLists.txt  LICENSE  README.md  TODO.md  package.json  tsconfig.json  typedoc.json
.github/workflows/: build.yml
docs/: ARRAY_IMPLEMENTATION.md  PYTHON_COMPATIBILITY.md  callback_threading_solution.js
examples/: README.md  demo_scard.js  scard.js  test_scard.js
examples/macos/: demo_accessibility.js  demo_accessibility_fse.js
examples/macos/accessibility/: README.md  accessibility.js
examples/windows/: demo_comtypes.js  demo_comtypes_ads.js  demo_controls.js  demo_ldap.js  demo_registry.js  demo_tray.js  simple.js  windows_controls.js  windows_registry.js  wintypes.js
examples/windows/comtypes/: comtypes.js
examples/windows/comtypes/interfaces/: directorysearch.js  persist.js  shelllink.js
examples/windows/ldap/: ldap.js
examples/windows/registry/: registry.js
examples/windows/tray/: tray.js
lib/: index.d.ts  index.js
lib/core/: Library.js  callback-tracker.js  callback.js  funcptr.js  lazy-loader.js  types.js
lib/memory/: buffer.js  operations.js  pointer.js
lib/platform/: constants.js  errors.js  find_library.js  win_types.js
lib/structures/: Structure.js  Union.js
lib/structures/helpers/: array.js  bitfield.js  common.js  struct.js  union.js  wrap.js
lib/types/: SimpleCData.js  primitives.js
lib/utils/: cache.js
src/: addon.cc  addon.h  array.cc  array.h  callback.cc  callback.h  ctypes.cc  function.cc  function.h  library.cc  library.h  module.cc  shared.h  struct.cc  struct.h  types.cc  types.h  version.cc  version.h
test/: benchmark.js  benchmark_variadic.js  debug_array.js  debug_buffer.js  debug_create.js  debug_errcheck.js  debug_override.js  debug_proxy.js  debug_readvalue.js  test.js  test_array_in_struct.js  test_array_integration.js  test_array_python_compat.js  test_arrays.js  test_errcheck.js  test_errcheck_standalone.js  test_fixes.js  test_nested_bitfields.js  test_new_types.js  test_python_compat.js  test_python_names.js  test_python_syntax.js  test_struct_integration.js  test_struct_python_compat.js  test_struct_with_functions.js  test_structures.js  test_variadic.js  test_variadic.py  test_windows.js
tests/: README.md  node-ctypes.env  package.json  windows.js
tests/banchmarks/: koffi_banchmark.js
tests/benchmarks/: README.md  benchmark_ffi-napi.js  benchmark_koffi.js  benchmark_node_ffi.js  benchmark_python.py  buffer_pool.js
tests/common/: test_arrays.js  test_arrays.py  test_basic_types.js  test_basic_types.py  test_callback_leak_guard.js  test_callbacks.js  test_callbacks.py  test_errcheck.js  test_errcheck.py  test_functions.js  test_functions.py  test_nested_structs.js  test_nested_structs.py  test_pointers.js  test_pointers.py  test_python_compat.js  test_struct_by_value.js  test_struct_by_value.py  test_structs.js  test_structs.py  test_validation.js  test_version.js  test_wintypes.js  test_wintypes.py
tests/windows/: test_winapi.js  test_winapi.py
